<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="@dimen/list_button_size"
        android:layout_height="@dimen/list_button_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="end|center"
        android:layout_marginEnd="@dimen/list_margin_horizontal"
        android:layout_marginStart="@dimen/list_margin_horizontal"
        android:background="@drawable/ic_delete_black_24dp" />

    <TextView
        android:id="@+id/serverName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_margin_horizontal"
        android:layout_marginTop="@dimen/list_margin_vertical"
        android:layout_toStartOf="@id/deleteButton"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@color/colorFontNormal"
        android:textSize="@dimen/list_text_normal" />

    <TextView
        android:id="@+id/serverUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverName"
        android:layout_marginBottom="@dimen/list_margin_vertical"
        android:layout_marginStart="@dimen/list_margin_horizontal"
        android:layout_marginTop="@dimen/list_space_text_between"
        android:layout_toStartOf="@id/deleteButton"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@color/colorFontNormalShadowed"
        android:textSize="@dimen/list_text_secondary" />
</RelativeLayout>
